--- a/worker.ini
+++ b/worker.ini
@@ -7,3 +7,5 @@ ip_addr = 127.0.0.1
 port = 9999
 threads = 32
 api_threads = 4
+car_gen = /home/shrek/go/bin/car
+commp = /home/shrek/go/bin/stream-commp
