--- a/logging.ini
+++ b/logging.ini
@@ -1,1 +1,22 @@
 [logging]
+log_level = DEBUG
+
+[handlers]
+keys = console_handler
+
+[formatters]
+keys = simple_formatter
+
+[logger_root]
+handlers = console_handler
+level = NOTSET
+
+[handler_console_handler]
+class = StreamHandler
+level = DEBUG
+formatter = simple_formatter
+args = (sys.stdout,)
+
+[formatter_simple_formatter]
+format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
+datefmt = %Y-%m-%d %H:%M:%S
