--- a/logging.ini
+++ b/logging.ini
@@ -1,6 +1,6 @@
 [logging]
 log_level = DEBUG
-format = %(levelname)s:%(asctime)s %(message)s
-datefmt = %m/%d/%Y %I:%M:%S %p
+format = %%(levelname)s:%%(asctime)s %%(message)s
+datefmt = %%m/%%d/%%Y %%I:%%M:%%S %%p
 logfile = /tmp/ptolemy.log
 
